add_executable(SORT sort.cpp)

add_executable(Q1 question1.cpp)

add_executable(Q2 question2.cpp)

add_executable(Q3 question3.cpp)

add_executable(Q4 question4.cpp)

add_executable(Q5 question5.cpp)

add_executable(Q6 question6.cpp)

add_executable(Q7 question7.cpp)

add_executable(Q8 question8.cpp)

add_executable(Q9 question9.cpp)

add_executable(Q10 question10.cpp)

add_executable(Q11 question11.cpp)

add_executable(Q12 question12.cpp)

add_executable(Q13 question13.cpp)

add_executable(Q14 question14.cpp)