add_executable(SORT sort.cpp)

add_executable(Q1 question1.cpp)

add_executable(Q2 question2.cpp)

add_executable(Q3 question3.cpp)

add_executable(Q4 question4.cpp)

add_executable(Q5 question5.cpp)

add_executable(Q6 question6.cpp)

add_executable(Q7 question7.cpp)

add_executable(Q8 question8.cpp)

add_executable(Q9 question9.cpp)

add_executable(Q10 question10.cpp)

add_executable(Q11 question11.cpp)

add_executable(Q12 question12.cpp)

add_executable(Q13 question13.cpp)

add_executable(Q14 question14.cpp)

add_executable(Q15 question15.cpp)

add_executable(Q16 question16.cpp)

add_executable(Q17 question17.cpp)

add_executable(Q18 question18.cpp)

add_executable(Q19 question19.cpp)

add_executable(Q20 question20.cpp)

add_executable(Q21 question21.cpp)

add_executable(Q22 question22.cpp)

add_executable(Q23 question23.cpp)

add_executable(Q24 question24.cpp)

add_executable(Q25 question25.cpp)

add_executable(Q26 question26.cpp)

add_executable(Q27 question27.cpp)

add_executable(Q28 question28.cpp)

add_executable(Q29 question29.cpp)

add_executable(Q30 question30.cpp)

add_executable(Q31 question31.cpp)

add_executable(Q32 question32.cpp)

add_executable(Q34 question34.cpp)

add_executable(Q35 question35.cpp)

add_executable(Q36 question36.cpp)

add_executable(Q37 question37.cpp)

add_executable(Q38 question38.cpp)

add_executable(Q39 question39.cpp)